<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <PreferenceCategory android:title="@string/pref_normal_title">

        <Preference android:title="@string/pref_appearance_title">
            <intent
                android:targetPackage="com.hu.iJogging"
                android:targetClass="com.hu.walkingnotes.ui.preference.AppearanceActivity"/>
        </Preference>

        <Preference android:title="@string/pref_read_title">
            <intent
                android:targetPackage="com.hu.iJogging"
                android:targetClass="com.hu.walkingnotes.ui.preference.ReadActivity"/>
        </Preference>


        <CheckBoxPreference
            android:key="sound"
            android:title="@string/pref_sound_title"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_advanced_title">

        <Preference android:title="@string/notification">
            <intent
                android:targetPackage="com.hu.iJogging"
                android:targetClass="com.hu.walkingnotes.ui.preference.NotificationActivity"/>
        </Preference>
        <Preference
            android:title="@string/draft"
            android:key="draft">
            <intent
                android:targetPackage="com.hu.iJogging"
                android:targetClass="com.hu.walkingnotes.ui.preference.DraftActivity"/>
        </Preference>
        <Preference
            android:title="@string/pref_data_control_title"
            android:key="data_control">
            <intent
                android:targetPackage="com.hu.iJogging"
                android:targetClass="com.hu.walkingnotes.ui.preference.ControlActivity"/>
        </Preference>


        <Preference
            android:title="@string/filter"
            android:key="filter">

        </Preference>
        <Preference
            android:title="@string/pref_performance_title"
            >
            <intent
                android:targetPackage="com.hu.iJogging"
                android:targetClass="com.hu.walkingnotes.ui.preference.PerformanceActivity"
                />
        </Preference>
        <Preference
            android:title="@string/pref_other_title"
            >
            <intent
                android:targetPackage="com.hu.iJogging"
                android:targetClass="com.hu.walkingnotes.ui.preference.OtherActivity"
                />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_about_title">
        <Preference android:title="@string/pref_about_title">
            <intent
                android:targetPackage="com.hu.iJogging"
                android:targetClass="com.hu.walkingnotes.ui.preference.AboutActivity"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>